RuleEvaluator1/RuleEvaluator1.Parser/Predicate1Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Code\Personal\rule-evaluator-1\RuleEvaluator1\RuleEvaluator1.Parser\Grammars\Predicate1.g4 by ANTLR 4.9

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace RuleEvaluator1.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9")]
[System.CLSCompliant(false)]
public partial class Predicate1Parser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, OPERATOR=23, POPERATORS=24, 
		NUM=25, TEXT=26, BOOL=27, ID=28, WS=29;
	public const int
		RULE_pexpr = 0, RULE_expr = 1, RULE_operand = 2, RULE_func = 3, RULE_pfunction = 4, 
		RULE_constant = 5;
	public static readonly string[] ruleNames = {
		"pexpr", "expr", "operand", "func", "pfunction", "constant"
	};

	private static readonly string[] _LiteralNames = {
		null, "'!'", "'('", "')'", "'-'", "'IF'", "','", "'LOWER'", "'UPPER'", 
		"'TRIM'", "'ABS'", "'CEILING'", "'FLOOR'", "'ROUND'", "'MAX'", "'MIN'", 
		"'AVG'", "'CASE'", "'BEGINS'", "'CONTAINS'", "'ENDS'", "'ISBLANK'", "'ISNUMBER'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "OPERATOR", 
		"POPERATORS", "NUM", "TEXT", "BOOL", "ID", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Predicate1.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static Predicate1Parser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public Predicate1Parser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public Predicate1Parser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class PexprContext : ParserRuleContext {
		public PexprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pexpr; } }
	 
		public PexprContext() { }
		public virtual void CopyFrom(PexprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Pexpr_NegationContext : PexprContext {
		[System.Diagnostics.DebuggerNonUserCode] public PexprContext pexpr() {
			return GetRuleContext<PexprContext>(0);
		}
		public Pexpr_NegationContext(PexprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.EnterPexpr_Negation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.ExitPexpr_Negation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPredicate1Visitor<TResult> typedVisitor = visitor as IPredicate1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPexpr_Negation(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Pexpr_PoperatorContext : PexprContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode POPERATORS() { return GetToken(Predicate1Parser.POPERATORS, 0); }
		public Pexpr_PoperatorContext(PexprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.EnterPexpr_Poperator(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.ExitPexpr_Poperator(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPredicate1Visitor<TResult> typedVisitor = visitor as IPredicate1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPexpr_Poperator(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Pexpr_PfunctionContext : PexprContext {
		[System.Diagnostics.DebuggerNonUserCode] public PfunctionContext pfunction() {
			return GetRuleContext<PfunctionContext>(0);
		}
		public Pexpr_PfunctionContext(PexprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.EnterPexpr_Pfunction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.ExitPexpr_Pfunction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPredicate1Visitor<TResult> typedVisitor = visitor as IPredicate1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPexpr_Pfunction(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Pexpr_BoolContext : PexprContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOL() { return GetToken(Predicate1Parser.BOOL, 0); }
		public Pexpr_BoolContext(PexprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.EnterPexpr_Bool(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.ExitPexpr_Bool(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPredicate1Visitor<TResult> typedVisitor = visitor as IPredicate1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPexpr_Bool(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Pexpr_BracketsContext : PexprContext {
		[System.Diagnostics.DebuggerNonUserCode] public PexprContext pexpr() {
			return GetRuleContext<PexprContext>(0);
		}
		public Pexpr_BracketsContext(PexprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.EnterPexpr_Brackets(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.ExitPexpr_Brackets(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPredicate1Visitor<TResult> typedVisitor = visitor as IPredicate1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPexpr_Brackets(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Pexpr_IdContext : PexprContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(Predicate1Parser.ID, 0); }
		public Pexpr_IdContext(PexprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.EnterPexpr_Id(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.ExitPexpr_Id(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPredicate1Visitor<TResult> typedVisitor = visitor as IPredicate1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPexpr_Id(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PexprContext pexpr() {
		PexprContext _localctx = new PexprContext(Context, State);
		EnterRule(_localctx, 0, RULE_pexpr);
		try {
			State = 25;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				_localctx = new Pexpr_NegationContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 12; Match(T__0);
				State = 13; pexpr();
				}
				break;
			case 2:
				_localctx = new Pexpr_PoperatorContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 14; expr(0);
				State = 15; Match(POPERATORS);
				State = 16; expr(0);
				}
				break;
			case 3:
				_localctx = new Pexpr_PfunctionContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 18; pfunction();
				}
				break;
			case 4:
				_localctx = new Pexpr_IdContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 19; Match(ID);
				}
				break;
			case 5:
				_localctx = new Pexpr_BoolContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 20; Match(BOOL);
				}
				break;
			case 6:
				_localctx = new Pexpr_BracketsContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 21; Match(T__1);
				State = 22; pexpr();
				State = 23; Match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
	 
		public ExprContext() { }
		public virtual void CopyFrom(ExprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Expr_NegationOperationContext : ExprContext {
		[System.Diagnostics.DebuggerNonUserCode] public PexprContext pexpr() {
			return GetRuleContext<PexprContext>(0);
		}
		public Expr_NegationOperationContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.EnterExpr_NegationOperation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.ExitExpr_NegationOperation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPredicate1Visitor<TResult> typedVisitor = visitor as IPredicate1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr_NegationOperation(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Expr_FunctionCallContext : ExprContext {
		[System.Diagnostics.DebuggerNonUserCode] public FuncContext func() {
			return GetRuleContext<FuncContext>(0);
		}
		public Expr_FunctionCallContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.EnterExpr_FunctionCall(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.ExitExpr_FunctionCall(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPredicate1Visitor<TResult> typedVisitor = visitor as IPredicate1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr_FunctionCall(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Expr_PBinaryOperationContext : ExprContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode POPERATORS() { return GetToken(Predicate1Parser.POPERATORS, 0); }
		public Expr_PBinaryOperationContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.EnterExpr_PBinaryOperation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.ExitExpr_PBinaryOperation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPredicate1Visitor<TResult> typedVisitor = visitor as IPredicate1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr_PBinaryOperation(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Expr_ValueContext : ExprContext {
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext operand() {
			return GetRuleContext<OperandContext>(0);
		}
		public Expr_ValueContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.EnterExpr_Value(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.ExitExpr_Value(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPredicate1Visitor<TResult> typedVisitor = visitor as IPredicate1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr_Value(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Expr_BracketExpressionContext : ExprContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public Expr_BracketExpressionContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.EnterExpr_BracketExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.ExitExpr_BracketExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPredicate1Visitor<TResult> typedVisitor = visitor as IPredicate1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr_BracketExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Expr_PFunctionCallContext : ExprContext {
		[System.Diagnostics.DebuggerNonUserCode] public PfunctionContext pfunction() {
			return GetRuleContext<PfunctionContext>(0);
		}
		public Expr_PFunctionCallContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.EnterExpr_PFunctionCall(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.ExitExpr_PFunctionCall(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPredicate1Visitor<TResult> typedVisitor = visitor as IPredicate1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr_PFunctionCall(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Expr_BinaryOperationContext : ExprContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPERATOR() { return GetToken(Predicate1Parser.OPERATOR, 0); }
		public Expr_BinaryOperationContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.EnterExpr_BinaryOperation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.ExitExpr_BinaryOperation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPredicate1Visitor<TResult> typedVisitor = visitor as IPredicate1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr_BinaryOperation(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Expr_UnaryOperationContext : ExprContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public Expr_UnaryOperationContext(ExprContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.EnterExpr_UnaryOperation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.ExitExpr_UnaryOperation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPredicate1Visitor<TResult> typedVisitor = visitor as IPredicate1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr_UnaryOperation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		return expr(0);
	}

	private ExprContext expr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ExprContext _localctx = new ExprContext(Context, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_expr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 39;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__3:
				{
				_localctx = new Expr_UnaryOperationContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 28; Match(T__3);
				State = 29; expr(8);
				}
				break;
			case T__0:
				{
				_localctx = new Expr_NegationOperationContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 30; Match(T__0);
				State = 31; pexpr();
				}
				break;
			case NUM:
			case TEXT:
			case BOOL:
			case ID:
				{
				_localctx = new Expr_ValueContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 32; operand();
				}
				break;
			case T__1:
				{
				_localctx = new Expr_BracketExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 33; Match(T__1);
				State = 34; expr(0);
				State = 35; Match(T__2);
				}
				break;
			case T__4:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
				{
				_localctx = new Expr_FunctionCallContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 37; func();
				}
				break;
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
				{
				_localctx = new Expr_PFunctionCallContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 38; pfunction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 49;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 47;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
					case 1:
						{
						_localctx = new Expr_BinaryOperationContext(new ExprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 41;
						if (!(Precpred(Context, 6))) throw new FailedPredicateException(this, "Precpred(Context, 6)");
						State = 42; Match(OPERATOR);
						State = 43; expr(7);
						}
						break;
					case 2:
						{
						_localctx = new Expr_PBinaryOperationContext(new ExprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 44;
						if (!(Precpred(Context, 5))) throw new FailedPredicateException(this, "Precpred(Context, 5)");
						State = 45; Match(POPERATORS);
						State = 46; expr(6);
						}
						break;
					}
					} 
				}
				State = 51;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class OperandContext : ParserRuleContext {
		public OperandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operand; } }
	 
		public OperandContext() { }
		public virtual void CopyFrom(OperandContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class OperandConstantContext : OperandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ConstantContext constant() {
			return GetRuleContext<ConstantContext>(0);
		}
		public OperandConstantContext(OperandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.EnterOperandConstant(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.ExitOperandConstant(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPredicate1Visitor<TResult> typedVisitor = visitor as IPredicate1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperandConstant(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class VariableContext : OperandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(Predicate1Parser.ID, 0); }
		public VariableContext(OperandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.EnterVariable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPredicate1Listener typedListener = listener as IPredicate1Listener;
			if (typedListener != null) typedListener.ExitVariable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPredicate1Visitor<TResult> typedVisitor = visitor as IPredicate1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperandContext operand() {
		OperandContext _localctx = new OperandContext(Context, State);
		EnterRule(_localctx, 4, RULE_operand);
		try {
			State = 54;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NUM:
			case TEXT:
			case BOOL:
				_localctx = new OperandConstantContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 52; constant();
				}
				break;
			case ID:
				_localctx = new VariableContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 53; Match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
